--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ header{
     background-position: top left, bottom right;
     background-color: #F5F5F5;
     padding-top: 50px;
+    
 }
 
 .logo h2{
@@ -104,7 +105,6 @@ font-weight: 600;
 }
 
 
-
 #banner .banner-image img{
     max-width: 583px;
     max-height: 677;
@@ -119,6 +119,237 @@ font-weight: 600;
 }
 
 
+/* About section */
+
+#about{
+    padding-top: 130px;
+}
+ 
+#about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    align-items: center;
+    padding: 131px 156px;
+}
+    
+    .section-heading{
+    max-width: 827px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+
+#about .section-heading h2{
+    font-size: 36px;
+    margin-bottom: 30px;
+}
+
+
+#about .section-heading p{
+    font-size: 18px;
+    line-height: 30px;
+    color: #474747;
+    margin-bottom: 30px;
+}
+
+
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info .about-card p{
+  font-size: 18px;
+    line-height: 30px;
+    color: #474747;
+    margin-bottom: 30px;
+}
+
+.about-info{
+    text-align: center;
+}
+
+.about-info .about-card h4{
+    font-size: 20px;
+    color: #212121;
+}
+
+
+/* skill section */
+
+
+
+#skills{
+    padding-top: 130px;
+}
+
+#skills .skill-container{
+
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+#skills .skill-container .skill-box{
+    display: flex;
+    max-width: 300px;
+    max-height: 350px;
+    gap: 24px;
+    padding-left:25px;
+ 
+}
+
+.skill-box .skill-card{
+    padding: 30px;
+    box-shadow: 0 6px 50px 0 #000000ab;
+    max-width: 267px;
+}
+
+.skill-card img{
+    max-width: 44px;
+    margin-bottom: 30px;
+}
+
+.section-heading h2{
+    font-size: 30px;
+    color: #212121;
+    margin-bottom: 20px;
+}
+
+.section-heading p{
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 30px;
+    color: #474747;
+}
+
+
+.skill-card p{
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+}   
+
+
+/* resume section */
+
+#resume{
+    padding-top: 130px;
+}
+
+#resume .resume-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 113px auto 0;
+    display: flex;
+    gap: 24px;
+}
+
+.resume-container .section-title{
+    color: #474747;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.resume-card{
+    max-width: 511px;
+    margin-right: 37px;
+}
+
+.resume-card .card-title{
+    font-size: 30px;
+    font-weight: bold;
+    color: #474747;
+    margin-bottom: 18px;
+}
+
+.resume-card .card-info{
+    font-size: 20px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 20px;
+}
+
+.resume-card .card-text{
+    font-size: 16px;
+    font-weight: 28px;
+    color: #474747;
+    
+}
+
+
+.resume-container hr{
+     margin: 30px 0 ;
+}
+
+.cv {
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/* footer section */
+
+footer{
+    padding-top: 130px;
+    background-color: azure;
+    padding: 130px 0;
+}
+
+footer .footer-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    gap : 116px;
+}
+
+
+.footer-container .social{
+    width: 562px;
+}
+
+.footer-container .social p{
+    color: #474747;
+    line-height:28px ;
+    font-size: 16px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+    
+
+.footer-container a {
+    margin-right: 24px;
+}
+
+.footer-container form input[type="text"]{
+    width: 460px;
+    padding: 18px 31px ;
+    margin-bottom: 24px;
+    margin-top: 24px;
+    border-radius: 5px;
+    color: #757575;
+
+}
+
+.footer-container form input[type="email"]{
+    width: 460px;
+    padding: 18px 31px ;
+    margin-bottom: 24px;
+    border-radius: 5px;
+    color: #757575;
+
+}
+
+.footer-container form input[type="textarea"]{
+    width: 460px;
+    padding: 18px 31px ;
+    margin-bottom: 24px;
+    border-radius: 5px;
+    color: #757575;
+
+}
 
 
 
